# value

./: CMakeLists.txt  README.md  build_dev.sh
example/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
include/value/: adaptor_value.hpp  value.hpp
tests/: recursive_value_tests.cpp
